--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "week1",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@googlemaps/js-api-loader": "^1.16.6",
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
-    "jquery": "^3.7.1"
+    "fortawesome": "^0.0.1-security",
+    "jquery": "^3.7.1",
+    "lodash": "^4.17.21",
+    "react": "^18.2.0"
   }
 }
